--- a/wlstartup/index.html
+++ b/wlstartup/index.html
@@ -6,39 +6,83 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 <body>
     <header class="header">
-        <div class="logo">
-            <a href="#">
-                <img src="img/Logo.png" alt="">
-            </a>
+        <div class="inner-header">
+            <div class="logo">
+                <a href="#" class="logo-link">
+                    <img src="img/Logo.png" alt="">
+                </a>
+            </div>
+            <nav class="navbar">
+                <ul class="menu-nav">
+                    <li>
+                        <a href="#" class="menu-link">Home</a>
+                    </li>
+                    <li>
+                        <a href="#" class="menu-link">Services</a>
+                    </li>
+                    <li>
+                        <a href="#" class="menu-link">About</a>
+                    </li>
+                    <li>
+                        <a href="#" class="menu-link">Works</a>
+                    </li>
+                    <li>
+                        <a href="#" class="menu-link">Blog</a>
+                    </li>
+                    <li>
+                        <a href="#" class="menu-link">Clients</a>
+                    </li>
+                    <li>
+                        <a href="#" class="menu-link">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="mobile-nav">
+                <div class="burger">
+                    <i class="fa fa-bars" style="font-size:36px" id="burg"></i>
+
+                </div>
+                <ul class="mob-menu">
+                    <li>
+                        <a href="#" class="menu-link">Home</a>
+                    </li>
+                    <li>
+                        <a href="#" class="menu-link">Services</a>
+                    </li>
+                    <li>
+                        <a href="#" class="menu-link">About</a>
+                    </li>
+                    <li>
+                        <a href="#" class="menu-link">Works</a>
+                    </li>
+                    <li>
+                        <a href="#" class="menu-link">Blog</a>
+                    </li>
+                    <li>
+                        <a href="#" class="menu-link">Clients</a>
+                    </li>
+                    <li>
+                        <a href="#" class="menu-link">Contact</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <nav class="navbar">
-            <ul class="menu-nav">
-                <li>
-                    <a href="#">Home</a>
-                </li>
-                <li>
-                    <a href="#">Services</a>
-                </li>
-                <li>
-                    <a href="#">About</a>
-                </li>
-                <li>
-                    <a href="#">Works</a>
-                </li>
-                <li>
-                    <a href="#">Blog</a>
-                </li>
-                <li>
-                    <a href="#">Clients</a>
-                </li>
-                <li>
-                    <a href="#">Contact</a>
-                </li>
-            </ul>
-        </nav>
+ 
     </header>
+<div class="main-part">
+    <div class="text-layer">
+        <h1>Welcome to STARTUP</h1>
+        <p> Your Favourite Creative Agency Template </p>
+        <a href="#" class="st-btn">Get Started</a>
+    </div>
+
+</div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
