--- a/wlstartup/index.html
+++ b/wlstartup/index.html
@@ -82,6 +82,49 @@
     </div>
 
 </div>
+<div class="services-container">
+    <div class="txt-serv">
+        <h3>SERVICES</h3>
+        <div class="line"></div>
+        <p>We offer ipsum dolor sit amet, consetetur sadipscing elitr amet</p>
+    </div>
+    <div class="servs">
+        <div class="serv-box">
+            <div class="serv-img">
+                <img src="img/icon1.png" alt="">
+            </div>
+            <h4>Clean Typography</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minim</p>
+        </div>
+        <div class="serv-box">
+            <div class="serv-img">
+                <img src="img/icon3.png" alt="">
+            </div>
+            <h4>Clean Typography</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minim</p>
+        </div>
+        <div class="serv-box">
+            <div class="serv-img">
+                <img src="img/icon2.png" alt="">
+            </div>
+            <h4>Clean Typography</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minim</p>
+        </div>
+    </div>
+</div>
+<div class="about-container">
+    <h3>ABOUT US</h3>
+    <div class="line"></div>
+    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr amet</p>
+    <div class="about-boxes">
+        <div class="tx">
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sediam nonumy eirmod tempor invidunt ut labore et dolore aliquyam erat, sed diam voluptua. At vero eos et accusam et justo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor et dolore aliquyam erat. Lorem ipsum dolor sit amet. Lorem ipsum eat.
+        </div>
+        <div class="tx">
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sediam nonumy eirmod tempor invidunt ut labore et dolore aliquyam erat, sed diam voluptua. At vero eos et accusam et justo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor et dolore aliquyam erat. Lorem ipsum dolor sit amet. Lorem ipsum eat.
+        </div>
+    </div>
+</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="js/script.js"></script>
 </body>
