--- a/wlstartup/index.html
+++ b/wlstartup/index.html
@@ -124,7 +124,23 @@
             Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sediam nonumy eirmod tempor invidunt ut labore et dolore aliquyam erat, sed diam voluptua. At vero eos et accusam et justo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor et dolore aliquyam erat. Lorem ipsum dolor sit amet. Lorem ipsum eat.
         </div>
     </div>
+    <div class="team-members">
+        <div class="member">
+            <div class="member-img">
+                <img src="img/Layer 15.png" alt="">
+            </div>
+            <div class="social">
+                <a href="#"><img src="img/Facebook Logo.png" alt=""></a>
+                <a href="#"><img src="img/Twitter Logo Silhouette.png" alt=""></a>
+                <a href="#"><img src="img/Google Plus Logo.png" alt=""></a>
+                <a href="#"><img src="img/fa-linkedin.png" alt=""></a>
+            </div>
+            <h4>Shamim Mia</h4>
+            <p>Sr. Web Developer</p>
+        </div>
+    </div>
 </div>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="js/script.js"></script>
 </body>
