--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
             </div>
             <div class="box">
                 <div class="works-box">
-                    <img src="img/img.png" alt="">
+                    <img src="img/Layer 21.png" alt="">
                     <div class="work-hover">
                         <div class="inner-text">
                             <h4>Hair Dresser</h4>
@@ -318,7 +318,7 @@
             </div>
             <div class="box">
                 <div class="works-box">
-                    <img src="img/img.png" alt="">
+                    <img src="img/Layer 25.png" alt="">
                     <div class="work-hover">
                         <div class="inner-text">
                             <h4>Hair Dresser</h4>
@@ -334,7 +334,7 @@
             </div>
             <div class="box">
                 <div class="works-box">
-                    <img src="img/img.png" alt="">
+                    <img src="img/Layer 22.png" alt="">
                     <div class="work-hover">
                         <div class="inner-text">
                             <h4>Hair Dresser</h4>
@@ -350,7 +350,7 @@
             </div>
             <div class="box">
                 <div class="works-box">
-                    <img src="img/img.png" alt="">
+                    <img src="img/Layer 21.png" alt="">
                     <div class="work-hover">
                         <div class="inner-text">
                             <h4>Hair Dresser</h4>
@@ -421,6 +421,45 @@
             </div>
         </div>
     </div>
+</div>
+<div class="logos-container">
+    <div class="logos">
+        <div class="logo">
+            <img src="img/Layer 30.png" alt="">
+        </div>
+        <div class="logo">
+            <img src="img/Layer 31.png" alt="">
+        </div>
+        <div class="logo">
+            <img src="img/Layer 30.png" alt="">
+        </div>
+        <div class="logo">
+            <img src="img/Layer 34.png" alt="">
+        </div>
+    </div>
+    <div class="swiper-container mytxtSlider">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <div class="logo-text">
+                <p>
+                    Hvaing placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum”
+                </p>
+                <p class="title">John Doe, Google Inc.</p>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="logo-text">
+                <p>
+                    Hvaing placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum”
+                </p>
+                <p class="title">John Doe, Google Inc.</p>
+            </div>
+          </div>
+          
+        </div>
+        <div class="swiper-pagination"></div>
+      </div>
+   
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
