--- a/index.html
+++ b/index.html
@@ -519,6 +519,21 @@
         </div>
     </div>
 </div>
+<div class="footer">
+    <div class="inner-footer">
+        <div class="in-soc">
+            <div class="sc"><img src="img/Group 5 copy 3.png" alt=""></div>
+            <div class="sc"><img src="img/Group 5 copy 3.png" alt=""></div>
+            <div class="sc"><img src="img/Group 5 copy 3.png" alt=""></div>
+            <div class="sc"><img src="img/Group 5 copy 3.png" alt=""></div>
+
+        </div>
+        <div class="line white"></div>
+        <div class="copy">
+            © 2015 Startup, Designed by Shap
+        </div>
+    </div>
+</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
