--- a/index.html
+++ b/index.html
@@ -24,25 +24,25 @@
             <nav class="navbar">
                 <ul class="menu-nav">
                     <li>
-                        <a href="#" class="menu-link">Home</a>
+                        <a href="index.html" class="menu-link">Home</a>
                     </li>
                     <li>
-                        <a href="#" class="menu-link">Services</a>
+                        <a href="#serv" class="menu-link">Services</a>
                     </li>
                     <li>
-                        <a href="#" class="menu-link">About</a>
+                        <a href="#about" class="menu-link">About</a>
                     </li>
                     <li>
-                        <a href="#" class="menu-link">Works</a>
+                        <a href="#works" class="menu-link">Works</a>
                     </li>
                     <li>
-                        <a href="#" class="menu-link">Blog</a>
+                        <a href="#blog" class="menu-link">Blog</a>
                     </li>
                     <li>
-                        <a href="#" class="menu-link">Clients</a>
+                        <a href="#clients" class="menu-link">Clients</a>
                     </li>
                     <li>
-                        <a href="#" class="menu-link">Contact</a>
+                        <a href="#contacts" class="menu-link">Contact</a>
                     </li>
                 </ul>
             </nav>
@@ -53,25 +53,25 @@
                 </div>
                 <ul class="mob-menu">
                     <li>
-                        <a href="#" class="menu-link">Home</a>
+                        <a href="index.html" class="menu-link">Home</a>
                     </li>
                     <li>
-                        <a href="#" class="menu-link">Services</a>
+                        <a href="#serv" class="menu-link">Services</a>
                     </li>
                     <li>
-                        <a href="#" class="menu-link">About</a>
+                        <a href="#about" class="menu-link">About</a>
                     </li>
                     <li>
-                        <a href="#" class="menu-link">Works</a>
+                        <a href="#works" class="menu-link">Works</a>
                     </li>
                     <li>
-                        <a href="#" class="menu-link">Blog</a>
+                        <a href="#blog" class="menu-link">Blog</a>
                     </li>
                     <li>
-                        <a href="#" class="menu-link">Clients</a>
+                        <a href="#clients" class="menu-link">Clients</a>
                     </li>
                     <li>
-                        <a href="#" class="menu-link">Contact</a>
+                        <a href="#contacts" class="menu-link">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -86,7 +86,7 @@
     </div>
 
 </div>
-<div class="services-container">
+<div class="services-container" id="serv">
     <div class="txt-serv">
         <h3>SERVICES</h3>
         <div class="line"></div>
@@ -116,7 +116,7 @@
         </div>
     </div>
 </div>
-<div class="about-container">
+<div class="about-container" id="about">
     <h3>ABOUT US</h3>
     <div class="line"></div>
     <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr amet</p>
@@ -207,7 +207,7 @@
   
     </div>
 </div>
-<div class="latest-works-container">
+<div class="latest-works-container" id="works">
     <h2>Latest Works</h2>
     <div class="line"></div>
     <div class="works">
@@ -374,7 +374,7 @@
     <h2>Do you like OUR WORK so far? Let's talk about YOUR PROJECT!</h2>
     <a href="#" class="st-btn">GET IN THOUGH</a>
 </div>
-<div class="blogs-container">
+<div class="blogs-container" id="blog">
     <h3>Recent blog posts</h3>
     <div class="line"></div>
     <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr amet</p>
@@ -424,7 +424,7 @@
         </div>
     </div>
 </div>
-<div class="logos-container">
+<div class="logos-container" id="clients">
     <div class="logos">
         <div class="logo">
             <img src="img/Layer 30.png" alt="">
@@ -463,7 +463,7 @@
       </div>
    
 </div>
-<div class="contacts-page">
+<div class="contacts-page" id="contacts">
     <h3>Get in touch</h3>
     <div class="line"></div>
     <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr amet</p>
