--- a/index.html
+++ b/index.html
@@ -51,30 +51,31 @@
                     <i class="fa fa-bars" style="font-size:36px" id="burg"></i>
 
                 </div>
-                <ul class="mob-menu">
-                    <li>
-                        <a href="index.html" class="menu-link">Home</a>
-                    </li>
-                    <li>
-                        <a href="#serv" class="menu-link">Services</a>
-                    </li>
-                    <li>
-                        <a href="#about" class="menu-link">About</a>
-                    </li>
-                    <li>
-                        <a href="#works" class="menu-link">Works</a>
-                    </li>
-                    <li>
-                        <a href="#blog" class="menu-link">Blog</a>
-                    </li>
-                    <li>
-                        <a href="#clients" class="menu-link">Clients</a>
-                    </li>
-                    <li>
-                        <a href="#contacts" class="menu-link">Contact</a>
-                    </li>
-                </ul>
+           
             </div>
+            <ul class="mob-menu mn">
+                <li>
+                    <a href="index.html" class="menu-link">Home</a>
+                </li>
+                <li>
+                    <a href="#serv" class="menu-link">Services</a>
+                </li>
+                <li>
+                    <a href="#about" class="menu-link">About</a>
+                </li>
+                <li>
+                    <a href="#works" class="menu-link">Works</a>
+                </li>
+                <li>
+                    <a href="#blog" class="menu-link">Blog</a>
+                </li>
+                <li>
+                    <a href="#clients" class="menu-link">Clients</a>
+                </li>
+                <li>
+                    <a href="#contacts" class="menu-link">Contact</a>
+                </li>
+            </ul>
         </div>
  
     </header>
@@ -82,7 +83,7 @@
     <div class="text-layer">
         <h1>Welcome to STARTUP</h1>
         <p> Your Favourite Creative Agency Template </p>
-        <a href="#" class="st-btn">Get Started</a>
+        <a href="#serv" class="st-btn get">Get Started</a>
     </div>
 
 </div>
