--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Startup</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link
@@ -93,29 +93,40 @@
         <div class="line"></div>
         <p>We offer ipsum dolor sit amet, consetetur sadipscing elitr amet</p>
     </div>
-    <div class="servs">
-        <div class="serv-box">
-            <div class="serv-img">
-                <img src="img/icon1.png" alt="">
-            </div>
-            <h4>Clean Typography</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minim</p>
+ 
+    <div class="container">
+        <div class="interior">
+          <a class="btn" href="#open-modal">Open services</a>
         </div>
-        <div class="serv-box">
-            <div class="serv-img">
-                <img src="img/icon3.png" alt="">
+      </div>
+      <div id="open-modal" class="modal-window">
+        <div>
+          <a href="#" title="Close" class="modal-close">Close</a>
+          <div class="servs">
+            <div class="serv-box">
+                <div class="serv-img">
+                    <img src="img/icon1.png" alt="">
+                </div>
+                <h4>Clean Typography</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minim</p>
             </div>
-            <h4>Clean Typography</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minim</p>
-        </div>
-        <div class="serv-box">
-            <div class="serv-img">
-                <img src="img/icon2.png" alt="">
+            <div class="serv-box">
+                <div class="serv-img">
+                    <img src="img/icon3.png" alt="">
+                </div>
+                <h4>Clean Typography</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minim</p>
             </div>
-            <h4>Clean Typography</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minim</p>
+            <div class="serv-box">
+                <div class="serv-img">
+                    <img src="img/icon2.png" alt="">
+                </div>
+                <h4>Clean Typography</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minim</p>
+            </div>
         </div>
-    </div>
+        </div>
+      </div>
 </div>
 <div class="about-container" id="about">
     <h3>ABOUT US</h3>
