--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       </div>
       <div id="open-modal" class="modal-window">
         <div>
-          <a href="#" title="Close" class="modal-close">Close</a>
+          <a href="#" title="Close" class="modal-close">X</a>
           <div class="servs">
             <div class="serv-box">
                 <div class="serv-img">
