--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
  
     <div class="container">
         <div class="interior">
-          <a class="btn" href="#open-modal">Open services</a>
+          <a class="btnmd" href="#open-modal">Open services</a>
         </div>
       </div>
       <div id="open-modal" class="modal-window">
